src/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'TaiwanPearl-Regular', 'Microsoft YaHei', sans-serif;
  background: #f7f7f4;
  color: #333;
  min-height: 100vh;
  padding-top: 80px; /* For fixed header */
  overflow-x: hidden;
}

body.dark-mode {
  background: #1a2b40;
  color: #e0e6ed;
}

html.modal-open,
body.modal-open {
  overflow-y: hidden;
}

main {
  flex-grow: 1;
}

#app {
  max-width: 900px;
  margin: 0 auto;
  padding: 20px;
}

/* Fix the height of the vertical scrollbar for the body to avoid the header */
body > .os-scrollbar-vertical,
html > .os-scrollbar-vertical {
  top: 70px !important;
  height: calc(100% - 70px) !important;
}

.os-theme-light.os-scrollbar-vertical,
.os-theme-dark.os-scrollbar-vertical {
  --os-size: 7px;
}

.os-theme-light.os-scrollbar-vertical:hover,
.os-theme-dark.os-scrollbar-vertical:hover {
  --os-size: 10px;
}

/* Animations for modals */
@keyframes slide-down {
  from {
    transform: translateY(-30px);
    opacity: 0;
  }
  to {
    transform: translateY(0);
    opacity: 1;
  }
}

